feat: new endpoint POST /opening-hours/default
