# src/main/java/com/mycompany/bookme/exceptions/handler/ExceptionGlobalHandler.java
@@ -3,15 +3,22 @@ package com.mycompany.bookme.exceptions.handler;
 import com.mycompany.bookme.exceptions.ConflictException;
 import com.mycompany.bookme.exceptions.NotFoundException;
 import io.swagger.v3.oas.annotations.Hidden;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
+import org.springframework.security.access.AccessDeniedException;
 
 @Hidden
 @ControllerAdvice
 public class ExceptionGlobalHandler {
+
+  @ExceptionHandler(AccessDeniedException.class)
+  public ResponseEntity<?> handleAccessDenied(AccessDeniedException ex, HttpServletRequest req) {
+    return new ResponseEntity<>(ex.getMessage(), HttpStatus.FORBIDDEN);
+  }
 
   @ExceptionHandler(NotFoundException.class)
   public ResponseEntity<?> handlerNotFoundException(NotFoundException ex, WebRequest request) {
